Update GC Note